load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

package(default_visibility = ["//:__subpackages__"])

exports_files([
    "vite.bzl",
    "vite_dev_server.cjs",
    "vite_build.cjs",
    "vite_bazel_paths.cjs",
])

copy_to_bin(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//:__subpackages__"],
)
