
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "generate_cache_certificates",
    srcs = ["scripts/generate_cache_certificates.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "configure_cache_server",
    srcs = ["scripts/configure_cache_server.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "github_secrets",
    srcs = ["scripts/get_github_secrets.sh"],
    visibility = ["//visibility:public"],
)
